--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "fontawesome": "^4.7.2",
     "jquery": "^3.3.1",
     "vue": "^2.5.17"
   }
