--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.3.1",
     "vue": "^2.5.17"
   }
 }
