--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.3.1",
     "vue": "^2.5.17"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/403studio/vue-lesson.git"
+  },
+  "author": "Jackie Wang",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/403studio/vue-lesson/issues"
+  },
+  "homepage": "https://github.com/403studio/vue-lesson#readme"
 }
